# WEB_HW13

./: .coverage  .env.example  .gitignore  docker-compose.yml  main.py  my_limiter.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 9ae175636c65_add_confirmed.py  a455b11b7505_init.py  e97337a6fc77_add_avatar.py  f0b7a1d9d22a_add_default_for_avatar.py
conf/: config.py  messages.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16394  16399  16400  16402  16404  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_unit_repository_contacts.py
